force-app/main/default/objects/Basket__c/Basket__c.object-meta.xml
<CustomObject>
    <label>Basket</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Basket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baskets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>