force-app/main/default/objects/Basket__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Baskets</relationshipLabel>
    <relationshipName>Baskets</relationshipName>
    <type>Lookup</type>
</CustomField>