force-app/main/default/objects/Basket__c/fields/CustomOrderId__c.field-meta.xml
<CustomField>
    <fullName>CustomOrderId__c</fullName>
    <label>CustomOrderId</label>
    <referenceTo>Custom_Order__c</referenceTo>
    <relationshipLabel>Baskets</relationshipLabel>
    <relationshipName>Baskets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>