force-app/main/default/objects/Basket__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Baskets</relationshipLabel>
    <relationshipName>Baskets</relationshipName>
    <type>Lookup</type>
</CustomField>