force-app/main/default/objects/Basket__c/fields/ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked = add to Order
Unchecked = leave in the Basket</description>
    <label>ProductStatus</label>
    <type>Checkbox</type>
</CustomField>