force-app/main/default/objects/Basket__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>equally Product2.Price</description>
    <label>UnitPrice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>