force-app/main/default/objects/Basket__c/validationRules/lookup_can_t_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>lookup_can_t_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  ProductId__c )</errorConditionFormula>
    <errorDisplayField>ProductId__c</errorDisplayField>
    <errorMessage>lookup can`t_be_blank. Add value to Product</errorMessage>
</ValidationRule>